<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CameraActivity">
    <TextView
        android:id="@+id/tvTestCameraTitle"
        android:textColor="@color/mono800"
        android:text="@string/tvTestCameraTitle"
        android:textSize="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1"/>
    <SurfaceView
        android:id="@+id/surfaceView"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />
    <TextView
        android:id="@+id/tvPassed"
        android:textColor="@color/green800"
        android:text="@string/tvPassed"
        android:textSize="18dp"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.45"/>

    <Button
        android:id="@+id/bBack"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/red50"
        android:text="@string/bBack"
        android:background="@drawable/button_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintVertical_bias="1.0"
        app:layout_constraintWidth_percent="0.5"/>

    <Button
        android:id="@+id/bNext"
        android:text="@string/bNext"
        android:enabled="false"
        android:visibility="gone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/red50"
        android:background="@drawable/button_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintVertical_bias="1.0"
        app:layout_constraintWidth_percent="0.5"/>



    <Button
        android:id="@+id/btnRearCam"
        android:text="@string/bRearCamera"
        android:visibility="visible"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/red50"
        android:background="@drawable/button_back"
        android:onClick="rearCamera"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintVertical_bias="1.0"
        app:layout_constraintWidth_percent="0.5"/>

    <Button
        android:id="@+id/btnFrontCam"
        android:text="@string/bFrontCamera"
        android:visibility="gone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/red50"
        android:background="@drawable/button_back"
        android:onClick="rearCamera"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintVertical_bias="1.0"
        app:layout_constraintWidth_percent="0.5"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="400dp"
        android:layout_height="398dp"
        android:visibility="visible"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.775"
        app:srcCompat="@android:color/background_light" />

    <ImageView
        android:id="@+id/imageView2"
        android:visibility="visible"
        android:layout_width="400dp"
        android:layout_height="200dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:color/background_light" />
</android.support.constraint.ConstraintLayout>